# sip

./: .gitignore  .hgignore  .readthedocs.yaml  .repoman  LICENSE  MANIFEST.in  METADATA.in  NEWS  README  README.md  Roadmap.rst  TODO  build.py  configure.py.in  mk_distinfo.py  pyproject.toml  rb-product  rb-product.toml  rbproduct.py  setup.cfg  setup.py  sip.nsi.in  sip.pyi  siputils.py
Developers/: VersionNumbers.txt
code_generator/: abi_version.h  export.c  extracts.c  gencode.c  heap.c  lexer.c  messages.c  parser.c  parser.h  py2c.c  pybinding.c  sip.h  transform.c  type_hints.c
code_generator/metasrc/: lexer.l  parser.y
configurations/: rpi_py3.cfg
doc/: abi_12.rst  abi_13.rst  annotations.rst  c_api.rst  command_line.rst  command_line_tools.rst  conf.py  default.css  directives.rst  embedding.rst  examples.rst  incompatibilities.rst  index.rst  installation.rst  introduction.rst  legacy_command_line_tools.rst  other_topics.rst  pyproject_toml.rst  python_api.rst  sip5.rst  sip5_module.rst  sipbuild_api.rst  sipref.txt  specification_files.rst  using.rst
docs/: abi_12.rst  abi_13.rst  abi_versions.rst  annotations.rst  command_line_tools.rst  conf.py  directives.rst  examples.rst  index.rst  introduction.rst  module_v12_releases.md  module_v13_releases.md  other_topics.rst  pyproject_toml.rst  releases.md  requirements.in  requirements.txt  specification_files.rst
examples/: README
examples/package/: README
examples/package/core/: README  core.sip  project.py  pyproject.toml
examples/project/: README
examples/project/core/: project.py  pyproject.toml
examples/project/core/core/: core.sip
examples/project/extras/: README  pyproject.toml
examples/project/extras/extras/: extras.sip
examples/self-contained/: README  fib.sip  pyproject.toml
examples/simple/: README  age.sip  build.py  package.py  pyproject.toml  setup.py
examples/standalone/: fib.sip  pyproject.toml
lib/: LICENSE  LICENSE.short  README  README.Fink  README.HP-UX  THANKS  configure.py  sipdistutils.py  siputils.py
sip5/: __init__.py  argument_parser.py  bindings.py  bindings_main.py  exceptions.py  extract_xml.py  install.py  module.py  module_abi.py  module_main.py  sip5.py  sip5_main.py  standard_arguments.py  version.py
sip5/bindings/: bindings.py  bindings_configuration.py  bindings_context.py  exceptions.py
sip5/builder/: __init__.py  abstract_builder.py  api.py  bindings.py  buildable.py  builder.py  configurable.py  configuration.py  context.py  distinfo.py  distutils_builder.py  exceptions.py  installable.py  package.py  project.py  pyproject.py
sip5/distinfo/: __init__.py  distinfo.py  main.py
sip5/docs/: extract_xml.py
sip5/legacy/: sip5.py
sip5/module/: abi_version.h  abi_version.py  main.py  module.py
sip5/module_source/: apiversions.c  array.c  setup.cfg.in  setup.py.in  sip.h.in  sip.rst.in  sipint.h  siplib.c  voidptr.c
sipbuild/: __init__.py  abstract_project.py  api.py  argument_parser.py  bindings.py  bindings_configuration.py  buildable.py  builder.py  configurable.py  distutils_builder.py  exceptions.py  installable.py  project.py  py_versions.py  pyproject.py  setuptools_builder.py  sip_module_configuration.py  toml.py
sipbuild/distinfo/: __init__.py  distinfo.py  main.py
sipbuild/generator/: __init__.py  api.py  bindings_configuration.py  extracts.py  formatters.py  indexed_lists.py  instantiations.py  python_slots.py  scoped_name.py  specification.py  templates.py  type_hints.py  utils.py
sipbuild/legacy/: header.py  sip5.py
sipbuild/module/: __init__.py  abi_version.py  header_main.py  main.py  module.py  module_main.py
sipbuild/tools/: build.py  install.py  module.py  sdist.py  wheel.py
sipgen/: export.c  extracts.c  gencode.c  genxml.c  heap.c  lexer.c  lexer.l  main.c  main.c.in  messages.c  parser.c  parser.h  parser.y  pybinding.c  sip.h  sip.h.in  sipgen.sbf  transform.c  type_hints.c
sipgen/metasrc/: lexer.l  parser.y
siplib/: apiversions.c  array.c  array.h  bool.cpp  descriptors.c  int_convertors.c  objmap.c  qtlib.c  sip.h  sip.h.in  sip.h.in.in  sipint.h  siplib.c  siplib.c.in  siplib.sbf  siplib.sbf.in  threads.c  voidptr.c
specs/: aix-g++  aix-g++-64  aix-xlc  aix-xlc-64  darwin-g++  freebsd-g++  freebsd-g++34  freebsd-icc  hpux-acc  hpux-acc-64  hpux-acc-o64  hpux-g++  hpux-g++-64  hpuxi-acc-32  hpuxi-acc-64  hurd-g++  irix-cc  irix-cc-64  irix-g++  linux-cxx  linux-ecc-64  linux-g++  linux-g++-64  linux-icc  linux-kcc  linux-kylix  linux-pgcc  lynxos-g++  macx-g++  macx-mwerks  macx-pbuilder  macx-xlc  netbsd-g++  openbsd-g++  qnx-g++  sco-cc  sco-g++  solaris-cc  solaris-cc-64  solaris-g++  (+12 more)
sphinx/: Makefile  annotations.rst  build_system.rst  builtin.rst  c_api.rst  command_line.rst  conf.py  conf.py.in  directives.rst  distutils.rst  embedding.rst  incompatibilities.rst  installation.rst  introduction.rst  introduction.rst.in  python_api.rst  specification_files.rst  using.rst
sphinx/extensions/: annotations.py  siproles.py
test/: README.md  conftest.py
test/class_attrs/: class_attrs_module.sip  test_class_attrs.py
test/class_callables/: class_callables_module.sip  test_class_callables.py
test/class_misc/: class_misc_module.sip  test_class_misc.py
test/class_simplewrapper/: class_simplewrapper_module.sip  test_class_simplewrapper.py
test/class_simplewrapper_v12/: class_simplewrapper_v12_module.sip  test_class_simplewrapper_v12.py
test/custom_enums/: custom_enums_module.sip  test_custom_enums.py
test/docstrings/: test_docstrings.py
test/embedded_sip_module/: embedded_sip_module_module.sip  test_embedded_sip_module.py
test/enums/: enums.sip  test_enums.py
test/exceptions/: handler.sip  (+2 more)
(+230 files in other folders)
