# The project configuration for sip.

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "sipbuild/_version.py"

[project]
name = "sip"
description = "A Python bindings generator for C/C++ libraries"
readme = "README.md"
urls.homepage = "https://github.com/Python-SIP/sip"
dependencies = ["packaging", "tomli; python_version<'3.11'"]
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version"]

[[project.authors]]
name = "Phil Thompson"
email = "phil@riverbankcomputing.com"

[project.scripts]
sip-distinfo = "sipbuild.tools.distinfo:main"
sip-module = "sipbuild.tools.module:main"
sip-build = "sipbuild.tools.build:main"
sip-install = "sipbuild.tools.install:main"
sip-sdist = "sipbuild.tools.sdist:main"
sip-wheel = "sipbuild.tools.wheel:main"
