# Specify sip v6 as the build system for the package.
[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

# Specify the PEP 621 metadata for the project.
[project]
name = "examples-core"

# Specify each set of bindings.
[tool.sip.bindings.core]

# Configure the project itself.
[tool.sip.project]
sip-module = "examples.sip"
dunder-init = true
