# Specify sip v5 as the build system for the package.
[build-system]
requires = ["sip >=4.20.0, <5.1"]
build-backend = "sip5.builder.api"

# Specify the PEP 522 metadata for the project.
[tool.sip]
name = "examples-core"

# Specify each set of bindings.
[[tool.sip.bindings]]
name = "core"

# Configure the project itself.
[tool.sip.project]
sip-module = "examples.sip"
